# clipper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml  release.yml
cache/: .gitkeep
configs/: app.yaml
docs/: architecture.md  project_summary.md  roadmap.md  rules.md  tasks.md
docs/agents/: export_agent.md  ingest_agent.md  scoring_agent.md  transcription_agent.md
input/: .gitkeep
logs/: .gitkeep
models/: .gitkeep
output/: .gitkeep
src/vaclip/: __init__.py  __version__.py
src/vaclip/cli/: commands.py  main.py
src/vaclip/config/: settings.py
src/vaclip/export/: clip_exporter.py
src/vaclip/ingest/: base.py  local_adapter.py  ytdlp_adapter.py
src/vaclip/logging/: setup.py
src/vaclip/models/: base.py  media.py  schemas.py
src/vaclip/pipeline/: pipeline.py
src/vaclip/scoring/: base.py  highlight_scorer.py
src/vaclip/transcription/: base.py  whisper_backend.py
src/vaclip/utils/: exceptions.py
tests/: conftest.py
tests/unit/: test_models.py  test_scoring.py
